UtahLiveDataTest/src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Degree_Year2__c</fullName>
        <label>Degree Year2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_Year__c</fullName>
        <label>Degree Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department2__c</fullName>
        <description>This field is used in SF424 RR Application for Federal Assistance form.</description>
        <label>Department2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName2__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Department Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Department Name under Organizational Unit block, SF-424 RR Multi-Project Cover form.</description>
        <label>Department Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptiveTitleOfApplicantsProject__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Descriptive Title of Applicant&apos;s Project, SF-424 RR Multi-Project Cover form.</description>
        <label>Descriptive Title of Applicant&apos;s Project</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DifferentStates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DifferentStates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectCharges__c</fullName>
        <description>This field is used in Budget Information for Non Construction Programs form.</description>
        <label>Direct Charges</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Status__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Personal Data form</description>
        <label>Disability Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Mobility/Orthopedic Impairement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Do Not Wish to Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division2__c</fullName>
        <description>This field is used in SF424 RR Application for Federal Assistance form.</description>
        <label>Division2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionName2__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Division Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Division Name under Organizational Unit block, SF-424 RR Multi-Project Cover form.</description>
        <label>Division Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticViolence1__c</fullName>
        <label>Domestic violence/dating violence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DomesticViolenceQuantitative__c</fullName>
        <label>Domestic violence/dating violence protec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DomesticViolence__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Domestic Violence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPHASIZE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMPHASIZE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC__c</fullName>
        <label>ESC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Other:(specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESSignature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field is used in Key Contacts form as Email, Application for Federal Assistance form as Email under Name and Contact information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployerOrTaxPayerIdentificationNumber__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Employer/TaxPayer Identification Number under Applicant Information block, SF-424 RR Multi Project Cover form.</description>
        <label>Employer/TaxPayer Identification Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingApplicant__c</fullName>
        <description>This field is used in Application for Federal Assistance Form as Applicant under Estimated Funding block, SF-424 RR Multi-Project Cover form as Total Federal Funds Requested.</description>
        <label>Estimated Funding Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingFederal__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Federal under Estimated Funding block, Budget Information for Construction Programs as Federal Assistance.</description>
        <label>Federal:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingLocal__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Local under Estimated Funding block.</description>
        <label>Local:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingOther__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Other under Estimated Funding block, SF-424 RR Multi-Project Cover form as Total Non-Federal Funds.</description>
        <label>Estimated Funding Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingProgramIncome__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Program Income under Estimated Funding block, SF-424 RR Multi-Project Cover form.</description>
        <label>Program Income:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingState__c</fullName>
        <description>This field is used in Application for Federal Assistance form as State under Estimated Funding block, SF-424 RR Multi-Project Cover form as Total Federal &amp; Non-Federal Funds.</description>
        <label>Estimated Funding State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Personal Data form</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Non-Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Do Not Wish to Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExemptionNumber__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information.</description>
        <label>Exemption Number</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpandingAgencyCapacity__c</fullName>
        <label>B.  Expanding  Agency Capacity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Other: (Please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExplanationForImpactOnEnvironment__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information.</description>
        <label>Explanation For Impact On Environment</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTEStaff__c</fullName>
        <label>Number of paid Staff (FTE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FakeField__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>FakeField</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>This field is used in Key Contacts form as Fax,Application for Federal Assistance form as Fax Number under Name and Contact Information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>Fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedTaxID__c</fullName>
        <label>Fed Tax ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAssistance__c</fullName>
        <description>This field is used in Budget Information for Construction Program Form.</description>
        <label>Federal Assistance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAwardIdentifier__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Federal Award Identifier, SF-424 R&amp;R Multi-Project Cover form as Agency Routing Identifier.</description>
        <label>Federal Award Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalEntityIdentifier__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Federal Entity Identifier, SF-424 R&amp;R Multi-Project Cover form as Federal Identifier.</description>
        <label>Federal Entity Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalProgramNameDescription__c</fullName>
        <description>This field is used in Disclosure of  Lobbying Activities Form</description>
        <label>Federal Program Name Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalRecipient__c</fullName>
        <description>This field is used in Disclosure of Lobbying Activities Form</description>
        <label>Federal Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalShare__c</fullName>
        <description>This field is used in Budget Information for Construction Programs form</description>
        <label>Federal Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>This field is used in Certification Regarding Lobbying form as First Name, Key Contacts form as First Name, Application for Federal Assistance form as First Name under Name and Contact Information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>First Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormAttachments__c</fullName>
        <label>Attachments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required Attachments are uploaded.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forms Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fringe_Benefits__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period Form</description>
        <label>Fringe Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundedLastYear__c</fullName>
        <label>FundedLastYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingCategory__c</fullName>
        <label>Funding Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Victim Services</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingOpportunityNumber__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Funding Opportunity Number.</description>
        <label>Funding Opportunity Number:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityTitle__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Title under Funding Opportunity block.</description>
        <label>Funding Opportunity Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funds_Requested__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period Form</description>
        <label>Funds Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Personal Data Form</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Do Not Wish to Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeographicLocation2__c</fullName>
        <label>A.  Geographic Location:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rural area</fullName>
                </value>
                <value>
                    <fullName>Tribal area</fullName>
                </value>
                <value>
                    <fullName>Under-served urban area</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeographicLocation__c</fullName>
        <label>A.  Geographic Location:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rural area</fullName>
                </value>
                <value>
                    <fullName>Tribal area</fullName>
                </value>
                <value>
                    <fullName>Under-served urban area</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoalObjectiveIndicatorFormula__c</fullName>
        <formula>GoalObjectiveIndicator__c = &apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Objective Indicator Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoalObjectiveIndicator__c</fullName>
        <label>Goal Objective Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovernmentalVictimServices__c</fullName>
        <label>Governmental victim services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Application Details</relationshipLabel>
        <relationshipName>Application_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HEPE__c</fullName>
        <label>HEPE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Other:  (Please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasPreviousGoal__c</fullName>
        <label>HasPreviousGoal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideFormEditAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Form Edit Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HumanSubjectAssuranceNumber__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information form.</description>
        <label>Human Subject Assurance Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HumanSubjectInvolved__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information</description>
        <label>Human Subject Involved</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IACUCReviewStatus__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information form</description>
        <label>IACUC Review Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICExcutionDate2__c</fullName>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICExcutionDate__c</fullName>
        <label>ICExcutionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICGovernmentalUnit__c</fullName>
        <label>ICGovernmentalUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICNonprofitOrganization__c</fullName>
        <label>Nonprofit Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICSignature2__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICSignature__c</fullName>
        <label>ICSignature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICTitle2__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICTitle__c</fullName>
        <label>ICTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRBReviewStatus__c</fullName>
        <description>This field is used in Research and Related Other Project Information.</description>
        <label>IRB Review Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigration__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Immigration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ImpactOnEnvironmentNo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Research &amp; Related Other Project Information form.</description>
        <label>Impact On Environment No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpactOnEnvironmentYes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Research &amp; Related Other Project Information form.</description>
        <label>Impact On Environment Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImplementingAgencyType__c</fullName>
        <label>Implementing Agency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Criminal Justice Government</fullName>
                </value>
                <value>
                    <fullName>Non-Criminal Justice Govern</fullName>
                </value>
                <value>
                    <fullName>Private, Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
                <value>
                    <fullName>Other (list type)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InKindMatchList__c</fullName>
        <label>b. LIST the Source of in-kind match</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IndianPopulations__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Indian Populations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IndirectCharges__c</fullName>
        <description>This field is used in Budget Information for Non Construction Programs form</description>
        <label>Indirect Charges</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialGeneralCompliancePicklist__c</fullName>
        <label>InitialGeneralCompliancePicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntensiveServicesFundPicklist__c</fullName>
        <label>IntensiveServicesFundPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JobTitlesDescriptions__c</fullName>
        <label>Job titles and descriptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sexual Assault Manager</fullName>
                </value>
                <value>
                    <fullName>Sexual Assault Coordinator</fullName>
                </value>
                <value>
                    <fullName>Sexual Assault Diversity Coordinator</fullName>
                </value>
                <value>
                    <fullName>Sexual Assault Mobile Crisis Team Volunteer</fullName>
                </value>
                <value>
                    <fullName>Sexual Assault Hotline Volunteer</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEAName__c</fullName>
        <label>LEA Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALPINE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>BEAVER DISTRICT</fullName>
                </value>
                <value>
                    <fullName>BOX ELDER DISTRICT</fullName>
                </value>
                <value>
                    <fullName>CACHE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>CARBON DISTRICT</fullName>
                </value>
                <value>
                    <fullName>DAGGETT DISTRICT</fullName>
                </value>
                <value>
                    <fullName>DAVIS DISTRICT</fullName>
                </value>
                <value>
                    <fullName>DUCHESNE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>EMERY DISTRICT</fullName>
                </value>
                <value>
                    <fullName>GARFIELD DISTRICT</fullName>
                </value>
                <value>
                    <fullName>GRAND DISTRICT</fullName>
                </value>
                <value>
                    <fullName>GRANITE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>IRON DISTRICT</fullName>
                </value>
                <value>
                    <fullName>JORDAN DISTRICT</fullName>
                </value>
                <value>
                    <fullName>JUAB DISTRICT</fullName>
                </value>
                <value>
                    <fullName>KANE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>MILLARD DISTRICT</fullName>
                </value>
                <value>
                    <fullName>MORGAN DISTRICT</fullName>
                </value>
                <value>
                    <fullName>NEBO DISTRICT</fullName>
                </value>
                <value>
                    <fullName>NORTH SANPETE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>NORTH SUMMIT DISTRICT</fullName>
                </value>
                <value>
                    <fullName>PARK CITY DISTRICT</fullName>
                </value>
                <value>
                    <fullName>PIUTE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>RICH DISTRICT</fullName>
                </value>
                <value>
                    <fullName>SAN JUAN DISTRICT</fullName>
                </value>
                <value>
                    <fullName>SEVIER DISTRICT</fullName>
                </value>
                <value>
                    <fullName>SOUTH SANPETE DISTRICT</fullName>
                </value>
                <value>
                    <fullName>SOUTH SUMMIT DISTRICT</fullName>
                </value>
                <value>
                    <fullName>TINTIC DISTRICT</fullName>
                </value>
                <value>
                    <fullName>TOOELE DISTRICT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEANoUpdateCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEANoUpdateCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAUpdateCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEAUpdateCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>This field is used in Certification Regarding Lobbying form as Last Name, Key Contacts form as Last Name,  Application for Federal Assistance form as Last Name under Name and Contact information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalNameOfApplicant__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Legal Name Of Applicant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manuals__c</fullName>
        <label>Manuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <description>This field is used in Certification Regarding Lobbying form as Middle Name, Key Contacts form as Middle Name,  Application for Federal Assistance form as Middle Name under Name and Contact Information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumMatch__c</fullName>
        <formula>Application__r.TotalGrantCost__c* Application__r.Announcement__r.GranteeMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinimumMatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Acad__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period Form</description>
        <label>Months Acad.</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>